# genai-doc-classification

./: .gitignore  README.md  batch_classify.sh  classify_doc.py  pyproject.toml
batch/: README.md  batch_classify.py  batch_classify.sh
batch_results/: batch_results_20250825_230021.json
data/: ambiguous_document.txt  corrupted_document.txt
docs/: BATCH_PROCESSING_GUIDE.md
examples/: modern_examples.py  practical_s3_usage.py  s3_bucket_usage.py
scripts/: debug_bedrock_response.py  quick_test.py  test_image.py  test_low_confidence.py  test_region_flag.py  test_suite.py  test_textract_options.py
src/genai_doc_classification/: __init__.py  classifier.py  config.py  main.py  models.py
tests/: __init__.py  test_models.py
